
2005-02-18  Volker Stroebel <volker@planetpenguin.de>
	* data/translations/*
	updated translations
	
	* contrib/palettes/*
	added gimp color palettes for the terrains
	
	* configure.in
	added --with-tcl-inc and --with-tcl-lib-name
	
2005-02-15  Volker Stroebel <volker@planetpenguin.de>
	* src/course_load.cpp
	made hud translateable

2005-02-11  Volker Stroebel <volker@planetpenguin.de>
	* src/videoconfig.*
	added videomode autodetection (only resolutions)
	
	* src/gameconfig.*
	added x_resolution_half_width
	added disable_videomode_autodetection
	
	* src/splash_screen.*
	made label translateable and changed merged images
	
	* src/ppgltk/images/png_reader.*
	added support for grayscale and palette images
	
	*src/credits.cpp
	added translators to credits

2005-02-10  Volker Stroebel <volker@planetpenguin.de>
	* src/graphicsconfig.cpp
	increased size of language selection widget
	
	* src/winsys.cpp
	fixed compilation problem on some sdl version

2005-02-08  Volker Stroebel <volker@planetpenguin.de>
	* src/quadtree.cpp src/textures.cpp src/lopp.cpp
	added some fixes from ArKay
	
2005-02-07  Volker Stroebel <volker@planetpenguin.de>
	* src/translations/*
	updated and added new translations

=== ppracer 0.3 ===

2005-02-01  Volker Stroebel <volker@planetpenguin.de>
	* src/ppgltk/font.* src/callbacks.cpp
	implemented pp_bind_font
	
	* src/data/*
	updated font registration
	added fr_FR translation
	updated translation

2005-01-31  Volker Stroebel <volker@planetpenguin.de>
	* src/textures.cpp
	added patch from Stephane Marchesin to fix
	skybox gabs on ati radeon cards
	
	* src/ppgltk/*
	changed enabled state to sensitive state in pp::Widgets
	implemented insensitive state in pp::Label and pp::Listbox
	added insensitiv and focus color to pp::Theme
	added hasFocus handling to pp::Listbox
	
	* src/joystickconfig.*
	made config insensitive if joystick is disabled
	finished joystick config

2005-01-30  Volker Stroebel <volker@planetpenguin.de>
	* src/joystickconfig.*